Range with markers

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lottie-web": "^5.7.6",
     "path": "^0.12.7",
     "postcss": "^7",
+    "rc-slider": "^9.7.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
@@ -26,6 +27,7 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
+    "dev": "craco start",
     "start": "node server.js",
     "build": "craco build",
     "test": "craco test",
@@ -48,5 +50,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {}
 }
